fix overflow hidden in project show

--- a/app/assets/stylesheets/project_show.css.scss
+++ b/app/assets/stylesheets/project_show.css.scss
@@ -85,7 +85,6 @@
   margin: 50px 0px;
   max-height: 675px;
   padding-bottom: 100px;
-  overflow: hidden;
 }
 
 #stats-incomplete {
